tests/negative/test_cast_impl_eval_p_null.orb
fnc main () () {
    eval (sym p0:(i32 cn *) (p1:(i32 *) p0));
};